2004-03-26  Larry Ewing  <lewing@ximian.com>

	* htmlengine.c: replace all parse_color calls with
	html_parse_color.  Remove duplicate parse_color definition.

	* htmlstyle.c: replace all parse_color calls with
	html_parse_color.

2004-04-05  Radek Doulik  <rodo@ximian.com>

	* htmltext.c (cut_links_full): extended cut_links to handle the
	case when no collapsing of cutted area is wanted (shrink == 0)
	(cut_links): use cut_links_full
	(html_text_add_link_full): rewritten, cut links first, then add
	new link

	* htmlengine.c (apply_attributes): do not apply blue
	color/underline for links
	(element_parse_a): do not set color and underline to the style

2004-04-01  Radek Doulik  <rodo@ximian.com>

	* htmlengine.c (insert_text): do not merge parent's flow style,
	it's no more needed

	* htmltext.c (html_text_change_attrs): extracted this new helper
	function from html_text_set_style_in_range so that we are able to
	set attributes on attribute lists as well
	(html_text_get_pango_info): set parent's folder style to attrs
	before processing

	Fixes #53370

2004-03-31  Radek Doulik  <rodo@ximian.com>

	* htmltext.c (html_text_set_style_in_range): always apply size
	attr so that we can scale
	(html_pango_attr_font_size_calc): when no size attr is set handle
	it as default size 3
	(save_open_attrs): save font size only when necessary
	(save_close_attrs): ditto

2004-03-26  Radek Doulik  <rodo@ximian.com>

	* htmlstyle.c (parse_color): do not copy more than 7 bytes which
	we have allocated on stack

2004-03-25  Radek Doulik  <rodo@ximian.com>

	* htmlengine.c (add_line_break): do not check clue->head, it's not
	necessary and wrong
	(block_end_pre): finish flow
	(element_parse_pre): use finish flow instead of close flow so that
	we don't loose empty paragraph
	(element_parse_blockquote): ditto

	* htmltokenizer.c (in_tag): do not discard pending LF in pre
	(insert_paragraph_break): removed unused function

	Fixes #55460

2004-03-23  Radek Doulik  <rodo@ximian.com>
