@@ -1,3 +1,8 @@
+2004-04-14  Radek Doulik  <rodo@ximian.com>
+
+	* htmltext.c (html_text_get_pango_info): add links and flow
+	attributes only for non plain painters
+
 2004-03-26  Larry Ewing  <lewing@ximian.com>
 
 	* htmlengine.c: replace all parse_color calls with
